server/log.txt
file:///C:/Users/TuNeX/Desktop/DAILYWIN%20AI/server/src/routes/predictionRoutes.js:2
import { getPredictions, getLive } from '../controllers/predictionController.js';
                         ^^^^^^^
SyntaxError: The requested module '../controllers/predictionController.js' does not provide an export named 'getLive'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.0
